logs/syntax_error_2025-04-06_15-20-14.log
[SYNTAX ERROR]   File "projects/gtk_chat_client/chat_client.py", line 1
    Here's how you can implement the plan in Python:
        ^
SyntaxError: unterminated string literal (detected at line 1)
